--- a/hospitalerp-boot/pom.xml
+++ b/hospitalerp-boot/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>HospitalERP</artifactId>
+        <artifactId>hospitalerp</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
