--- a/hospitalerp-persistence/pom.xml
+++ b/hospitalerp-persistence/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>HospitalERP</artifactId>
+        <artifactId>hospitalerp</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
