--- a/hospitalerp-boot/src/main/resources/application.properties
+++ b/hospitalerp-boot/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=HospitalERP
 
+server.port=8081
+
+
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
 spring.datasource.username=hospitalerp
 spring.datasource.password=hospitalerp
@@ -13,3 +16,9 @@ spring.sql.init.mode=never
 
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+
+management.endpoints.web.exposure.include=health,info,mappings
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
+management.endpoint.health.show-details=always
+
