Add database initialization scripts, error handling, and Docker configuration

--- a/hospitalerp-boot/src/main/resources/application.properties
+++ b/hospitalerp-boot/src/main/resources/application.properties
@@ -1,24 +1,64 @@
 spring.application.name=HospitalERP
 
-server.port=8081
+# Application port (overridable via env)
+server.port=${SERVER_PORT:8081}
 
+# API-style errors (avoid HTML Whitelabel page)
+server.error.whitelabel.enabled=false
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-exception=false
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=hospitalerp
-spring.datasource.password=hospitalerp
+# ==============================
+# Database configuration (env-driven)
+# ==============================
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:oracle:thin:@//oracle:1521/XEPDB1}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:hospitalerp}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:hospitalerp}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
+# Hikari: be more tolerant during container startup (Oracle can take a while)
+spring.datasource.hikari.initialization-fail-timeout=0
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.maximum-pool-size=10
+
+# ==============================
+# JPA / Hibernate configuration
+# ==============================
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
+# Avoid hitting JDBC metadata too early during bootstrap
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# ==============================
+# SQL initialization
+# ==============================
 spring.sql.init.mode=never
 
+# ==============================
+# Logging
+# ==============================
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 
+# ==============================
+# Actuator / Management Endpoints
+# ==============================
 management.endpoints.web.exposure.include=health,info,mappings
 management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
 management.endpoint.health.show-details=always
 
+# ==============================
+# Profiles (default to 'default' if not provided)
+# ==============================
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
+
+# ==============================
+# Liquibase migrations
+# ==============================
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/master.xml
