--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
                 <artifactId>ojdbc11</artifactId>
                 <version>23.3.0.23.09</version>
             </dependency>
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>4.23.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
